1.2.5.1 - Patched minor post update bug - Fixed button overflow - removed redundant code

--- a/src/index.css
+++ b/src/index.css
@@ -156,11 +156,11 @@ cursor: pointer;
     background-color: #1c1e20;
     border: none;
     flex-flow: row nowrap;
-    gap: 20px;
+    gap: 9px;
     border-radius: 7px;
     justify-content: space-evenly;
     align-items: center;
-    padding: 20px;
+    padding: 18px;
 }
 /* 
 #link-container > span {
@@ -174,7 +174,34 @@ h3 {
     font-size: 20px;
 }
 
+.button{
+    color: #979899;
+    background-color: #131517;
 
+    padding: 12px;
+    max-height: 80px;
+    font-size: 16px;
+    font-weight: 700;
+
+    border: transparent;
+
+    border-radius: 10px;
+
+    text-align: center;
+
+    width: fit-content;
+
+    -moz-appearance: none;
+    -webkit-appearance: none;
+
+    outline: none;
+}
+
+.button:hover {
+    background-color: #1a1d1f;
+    cursor: pointer;
+    
+    }
 }
 
 a {
